--- a/itlwm.xcodeproj/xcshareddata/xcschemes/AirportItlwm-Legacy.xcscheme
+++ b/itlwm.xcodeproj/xcshareddata/xcschemes/AirportItlwm-Legacy.xcscheme
@@ -62,6 +62,34 @@
                ReferencedContainer = "container:itlwm.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BA262C992936741600C12FAC"
+               BuildableName = "AirportItlwm.kext"
+               BlueprintName = "AirportItlwm-Mountain Lion"
+               ReferencedContainer = "container:itlwm.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BA262D082936746900C12FAC"
+               BuildableName = "AirportItlwm.kext"
+               BlueprintName = "AirportItlwm-Lion"
+               ReferencedContainer = "container:itlwm.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
