adding Sonoma to AirportItlwm (all) project schema

--- a/itlwm.xcodeproj/xcshareddata/xcschemes/AirportItlwm (all).xcscheme
+++ b/itlwm.xcodeproj/xcshareddata/xcschemes/AirportItlwm (all).xcscheme
@@ -90,6 +90,20 @@
                ReferencedContainer = "container:itlwm.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BA7EB04D2A35C9AE00C685E8"
+               BuildableName = "AirportItlwm.kext"
+               BlueprintName = "AirportItlwm-Sonoma"
+               ReferencedContainer = "container:itlwm.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
